Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur ad, ab totam dolore vitae saepe ducimus distinctio beatae provident quod. Odio laudantium non nemo unde ratione rem saepe asperiores veritatis?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi, accusamus itaque. Repellendus, nam, repellat distinctio tenetur minima perferendis eaque asperiores ab doloribus consequuntur deserunt sapiente, inventore aspernatur necessitatibus consectetur hic.</p>
         </article>
     </main>
 </body>
