--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-pb.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur ad, ab totam dolore vitae saepe ducimus distinctio beatae provident quod. Odio laudantium non nemo unde ratione rem saepe asperiores veritatis?</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi, accusamus itaque. Repellendus, nam, repellat distinctio tenetur minima perferendis eaque asperiores ab doloribus consequuntur deserunt sapiente, inventore aspernatur necessitatibus consectetur hic.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
